--- a/runtime/package.json
+++ b/runtime/package.json
@@ -11,7 +11,11 @@
     "dotenv": "^10.0.0",
     "litellm": "^0.1.1"
   },
+  "devDependencies": {
+    "jest": "^27.5.1"
+  },
   "scripts": {
+    "test": "jest",
     "start": "node index.js",
     "dev": "nodemon index.js",
     "cli": "node cli.mjs -p ../examples/hello_world"
