--- a/www/package.json
+++ b/www/package.json
@@ -1,10 +1,26 @@
 {
-  "devDependencies": {
-    "http-server": "^14.1.1"
-  },
+  "name": "www",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start:frontend": "http-server . -p 8080 -c-1",
-    "start:backend": "node ../api/index.mjs",
-    "start": "npm run start:backend & npm run start:frontend"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.13"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13"
   }
 }
