--- a/www/package.json
+++ b/www/package.json
@@ -10,12 +10,22 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.27.3",
+    "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0"
+    "react-resizable-panels": "^2.1.3",
+    "remark-gfm": "^4.0.0",
+    "shadcn-ui": "^0.9.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
