--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,7 @@
     "@anthropic-ai/sdk": "^0.27.3",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
