--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,11 @@ packages = [{include = "playbooks"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 openai = "^1.52.0"
-anthropic = "^0.18.1"
+anthropic = "^0.42.0"
 google-cloud-aiplatform = "^1.38.1"
 typer = ">=0.9.0,<1.0.0"
 rich = "^13.7.0"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
