--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,6 +2,6 @@ fastapi[testing]>=0.104.0
 uvicorn>=0.24.0
 pydantic>=2.4.2
 python-dotenv>=1.0.0
-anthropic>=0.18.1
 pytest>=7.4.0
 pytest-cov>=4.1.0
+litellm>=0.28.0
