--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,4 +2,6 @@ pytest>=7.4.0
 pytest-cov>=4.1.0
 black>=23.7.0
 ruff>=0.1.7
-pyright>=1.1.373 
+pyright>=1.1.373
+python-dotenv>=1.0.0
+pytest-asyncio>=0.23.0
