--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,9 @@
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
+    "python.testing.autoTestDiscoverOnSaveEnabled": true,
     "python.testing.pytestArgs": [
-        "--verbose"
+        "-v"
     ],
     "files.exclude": {
         "**/.git": true,
@@ -24,5 +25,6 @@
         "**/.mypy_cache": true,
         "**/.ruff_cache": true,
         "**/node_modules": true
-    }
+    },
+    "python.logging.level": "debug"
 }
