Move render.yaml to root

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   # Backend API Service
   - type: web
     name: playbooks-api
+    rootDirectory: website
     runtime: python3.9
     buildCommand: cd api && pip install -r requirements.txt
     startCommand: cd api && uvicorn main:app --host 0.0.0.0 --port $PORT
@@ -12,6 +13,7 @@ services:
   # Frontend Static Site
   - type: web
     name: playbooks-frontend
+    rootDirectory: website
     runtime: node
     buildCommand: cd frontend && npm install && npm run build
     startCommand: cd frontend && npm start
