--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,12 @@ services:
   # Backend API Service
   - type: web
     name: playbooks-api
-    rootDirectory: website
-    runtime: python3.9
-    buildCommand: cd api && pip install -r requirements.txt
-    startCommand: cd api && uvicorn main:app --host 0.0.0.0 --port $PORT
+    plan: free
+    region: oregon
+    branch: master
+    repo: https://github.com/amolk/playbooks
+    buildCommand: cd website/api && pip install -r requirements.txt
+    startCommand: cd website/api && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
@@ -13,10 +15,12 @@ services:
   # Frontend Static Site
   - type: web
     name: playbooks-frontend
-    rootDirectory: website
-    runtime: node
-    buildCommand: cd frontend && npm install && npm run build
-    startCommand: cd frontend && npm start
+    plan: free
+    region: oregon
+    branch: master
+    repo: https://github.com/amolk/playbooks
+    buildCommand: cd website/frontend && npm install && npm run build
+    startCommand: cd website/frontend && npm start
     envVars:
       - key: NODE_VERSION
         value: 16.x
