--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,7 @@ services:
     region: oregon
     branch: master
     repo: https://github.com/amolk/playbooks
+    runtime: python3
     buildCommand: cd website/api && pip install -r requirements.txt
     startCommand: cd website/api && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
@@ -19,6 +20,7 @@ services:
     region: oregon
     branch: master
     repo: https://github.com/amolk/playbooks
+    runtime: node
     buildCommand: cd website/frontend && npm install && npm run build
     startCommand: cd website/frontend && npm start
     envVars:
