--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   - type: web
     name: playbooks-api
     runtime: python
-    buildCommand: cd website/api && pip install -r requirements.txt
+    buildCommand: cd website/api && pip install -r requirements.prod.txt
     startCommand: cd website/api && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
