--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,12 @@ services:
         value: claude-3-5-sonnet-20241022
       - key: DEBUG
         value: "true"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: playbooks-db
+          property: connectionString
+      - key: SECRET_KEY
+        generateValue: true
 
   # Frontend Static Site
   - type: web
@@ -28,3 +34,9 @@ services:
         value: https://playbooks-api.onrender.com
       - key: NEXT_PUBLIC_API_URL
         value: https://playbooks-api.onrender.com
+
+databases:
+  - name: playbooks-db
+    databaseName: playbooks
+    ipAllowList: []
+    plan: free
