--- a/website/api/requirements.prod.txt
+++ b/website/api/requirements.prod.txt
@@ -4,3 +4,6 @@ pydantic>=2.4.2
 python-dotenv>=1.0.0
 litellm>=0.28.0
 git+https://${GITHUB_TOKEN}@github.com/playbooks-ai/playbooks.git#egg=playbooks&subdirectory=python/packages/playbooks
+sqlalchemy>=2.0.23
+cryptography>=41.0.0
+psycopg2-binary>=2.9.9  # For PostgreSQL support
