--- a/website/api/requirements.txt
+++ b/website/api/requirements.txt
@@ -6,3 +6,6 @@ pytest>=7.4.0
 pytest-cov>=4.1.0
 litellm>=0.28.0
 -e ../../python/packages/playbooks
+sqlalchemy>=2.0.23
+cryptography>=41.0.0
+psycopg2-binary>=2.9.9  # For PostgreSQL support
