--- a/python/packages/playbooks/pyproject.toml
+++ b/python/packages/playbooks/pyproject.toml
@@ -8,24 +8,24 @@ readme = "README.md"
 packages = [{include = "playbooks", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.12"
-openai = "^1.52.0"
-anthropic = "^0.42.0"
-google-cloud-aiplatform = "^1.38.1"
-typer = ">=0.9.0,<1.0.0"
-rich = "^13.7.0"
-python-dotenv = "^1.0.1"
-autogen-core = "0.4.0.dev11"
-litellm = "^1.56.3"
-md2py = "^0.0.1"
+python = "^3.10"
+openai = "*"
+anthropic = "*"
+google_cloud_aiplatform = "*"
+typer = "*"
+rich = "*"
+python_dotenv = "*"
+litellm = "*"
+md2py = "*"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
-pytest-cov = "^4.1.0"
+pytest_cov = "^4.1.0"
 black = "^23.7.0"
-ruff = "^0.1.7"
-pyright = "^1.1.373"
-pytest-asyncio = "^0.21.1"
+ruff = "*"
+pyright = "*"
+pytest_asyncio = "*"
+autogen_core = "^0.4.0.dev13"
 
 [build-system]
 requires = ["poetry-core"]
