--- a/website/api/requirements.txt
+++ b/website/api/requirements.txt
@@ -1,11 +1,11 @@
-fastapi[testing]>=0.104.0
-uvicorn>=0.24.0
-pydantic>=2.4.2
-python-dotenv>=1.0.0
-pytest>=7.4.0
-pytest-cov>=4.1.0
-litellm>=0.28.0
+fastapi[testing]
+uvicorn
+pydantic
+python-dotenv
+pytest
+pytest-cov
+litellm
 -e ../../python/packages/playbooks
-sqlalchemy>=2.0.23
-cryptography>=41.0.0
-psycopg2-binary>=2.9.9  # For PostgreSQL support
+sqlalchemy
+cryptography
+psycopg2-binary  # For PostgreSQL support
