--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,16 +18,26 @@ jobs:
       with:
         python-version: "3.10"
         
-    - name: Install dependencies
+    - name: (Playbooks package) Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install poetry
         cd python/packages/playbooks
         poetry install
         
-    - name: Run linting
+    - name: (Playbooks package) Run linting
       run: |
         cd python/packages/playbooks
         poetry run ruff check .
         poetry run black --check .
-        poetry run mypy src/playbooks
+
+    - name: (Website API) Install dependencies
+      run: |
+        cd website/api
+        pip install -r requirements.txt
+        
+    - name: (Website API) Run linting
+      run: |
+        cd website/api
+        ruff check .
+        black --check .
