Update codecov instruction

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,10 +32,11 @@ jobs:
       run: |
         cd python/packages/playbooks
         poetry run pytest tests/ --cov=src/playbooks --cov-report=xml
-        
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        slug: playbooks-ai/playbooks
         file: ./python/packages/playbooks/coverage.xml
         fail_ci_if_error: true
