--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,22 +21,43 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         
-    - name: Install dependencies
+    - name: (Playbooks package) Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install poetry
         cd python/packages/playbooks
         poetry install
 
-    - name: Run tests
+    - name: (Playbooks package) Run tests
       run: |
         cd python/packages/playbooks
         poetry run pytest tests/ --cov=src/playbooks --cov-report=xml
 
-    - name: Upload coverage reports to Codecov
+    - name: (Website API) Install dependencies
+      run: |
+        cd website/api
+        pip install -r requirements.txt
+        pip install pytest pytest-cov
+
+    - name: (Website API) Run tests
+      run: |
+        cd website/api
+        pytest tests/ --cov=. --cov-report=xml -v
+
+    - name: Upload Playbooks package coverage
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         slug: playbooks-ai/playbooks
         file: ./python/packages/playbooks/coverage.xml
         fail_ci_if_error: true
+        flags: playbooks-package
+
+    - name: Upload API coverage
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        slug: playbooks-ai/playbooks
+        file: ./website/api/coverage.xml
+        fail_ci_if_error: true
+        flags: website-api
