--- a/python/packages/playbooks/pyproject.toml
+++ b/python/packages/playbooks/pyproject.toml
@@ -17,6 +17,9 @@ rich = "*"
 python_dotenv = "*"
 litellm = "*"
 md2py = "*"
+sqlalchemy = "^2.0.36"
+alembic = "^1.14.0"
+markdown-it-py = "^3.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
