--- a/python/packages/playbooks/.env.test
+++ b/python/packages/playbooks/.env.test
@@ -1,2 +1,7 @@
 ENVIRONMENT=test
 ANTHROPIC_API_KEY="sk-1234"
+
+# LiteLLM Configuration
+LITELLM_CACHE_PATH=".litellm_cache"
+LITELLM_CACHE_ENABLED="true"
+LITELLM_SET_VERBOSE="false"
