--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        // python -m playbooks.applications.agent_chat examples/playbooks/hello.md
+        // poetry run python -m playbooks.applications.agent_chat examples/playbooks/hello.md
         {
+            "envFile": "${workspaceFolder}/python/packages/playbooks/.env",
+            "cwd": "${workspaceFolder}/python/packages/playbooks",
             "name": "Agent Chat",
             "type": "debugpy",
             "request": "launch",
