--- a/python/packages/playbooks/.env.example
+++ b/python/packages/playbooks/.env.example
@@ -3,6 +3,11 @@ DEFAULT_MODEL=claude-3-5-sonnet-20241022
 ANTHROPIC_API_KEY=your-anthropic-api-key
 OPENAI_API_KEY=your-openai-api-key
 
-# API Configuration
-PORT=8000
-HOST=0.0.0.0
+# Redis Configuration (for LiteLLM caching) - for production
+REDIS_URL="redis://127.0.0.1:6379/0"
+
+# LiteLLM Configuration
+LITELLM_CACHE_PATH=".litellm_cache"
+LITELLM_CACHE_ENABLED="true"
+LITELLM_CACHE_TTL="3600"
+LITELLM_SET_VERBOSE="false"
