--- a/python/packages/playbooks/pyproject.toml
+++ b/python/packages/playbooks/pyproject.toml
@@ -33,6 +33,7 @@ pytest_asyncio = "*"
 autogen_core = "^0.4.0.dev13"
 mypy = "*"
 pytest-mock = "^3.14.0"
+pre-commit = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core"]
