--- a/python/packages/playbooks/.env.example
+++ b/python/packages/playbooks/.env.example
@@ -3,11 +3,10 @@ DEFAULT_MODEL=claude-3-5-sonnet-20241022
 ANTHROPIC_API_KEY=your-anthropic-api-key
 OPENAI_API_KEY=your-openai-api-key
 
-# Redis Configuration (for LiteLLM caching) - for production
 REDIS_URL="redis://127.0.0.1:6379/0"
 
-# LiteLLM Configuration
-LITELLM_CACHE_PATH=".litellm_cache"
-LITELLM_CACHE_ENABLED="true"
-LITELLM_CACHE_TTL="3600"
-LITELLM_SET_VERBOSE="false"
+# LLM Cache
+# LLM_CACHE_TYPE = disk or redis
+LLM_CACHE_TYPE="disk"
+LLM_CACHE_PATH=".llm_cache"
+LLM_CACHE_ENABLED="true"
