--- a/python/packages/playbooks/.env.test
+++ b/python/packages/playbooks/.env.test
@@ -2,7 +2,7 @@ ENVIRONMENT=test
 DEFAULT_MODEL=claude-3-5-sonnet-20241022
 ANTHROPIC_API_KEY="sk-1234"
 
-# LiteLLM Configuration
-LITELLM_CACHE_PATH=".litellm_cache"
-LITELLM_CACHE_ENABLED="true"
-LITELLM_SET_VERBOSE="false"
+# LLM Cache
+LLM_CACHE_TYPE="disk"
+LLM_CACHE_PATH=".llm_cache"
+LLM_CACHE_ENABLED="true"
