--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
             "request": "launch",
             "program": "${workspaceFolder}/python/packages/playbooks/src/playbooks/applications/agent_chat.py",
             "args": [
-                "${workspaceFolder}/python/packages/playbooks/examples/playbooks/hello.md"
+                "${workspaceFolder}/python/packages/playbooks/examples/playbooks/hello.md",
+                "--stream"
             ]
         }
     ]
