--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,12 +25,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-        cd python/packages/playbooks
         poetry install
 
     - name: (Playbooks package) Run tests
       run: |
-        cd python/packages/playbooks
         poetry run pytest tests/ --cov=src/playbooks --cov-report=xml
 
     - name: (Website API) Install dependencies
@@ -73,7 +71,7 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         slug: playbooks-ai/playbooks
-        file: ./python/packages/playbooks/coverage.xml
+        file: coverage.xml
         fail_ci_if_error: true
         flags: playbooks-package
 
