--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,15 @@
   },
   "editor.defaultFormatter": "mikoz.black-py",
   "editor.formatOnSave": true,
-  "notebook.formatOnSave.enabled": true
+  "notebook.formatOnSave.enabled": true,
+  "python.languageServer": "None",
+  "python.analysis.extraPaths": [
+      "./src"
+  ],
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
+  "python.testing.nosetestsEnabled": false,
+  "python.testing.pytestArgs": [
+      "tests"
+  ]
 }
