--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,7 @@
 ENVIRONMENT=test
 DEFAULT_MODEL=claude-3-5-sonnet-20241022
-ANTHROPIC_API_KEY="sk-1234"
 
 # LLM Cache
 LLM_CACHE_TYPE="disk"
-LLM_CACHE_PATH=".llm_cache"
+LLM_CACHE_PATH=".llm_cache_test"
 LLM_CACHE_ENABLED="true"
