--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ autogen_core = "^0.4.0.dev13"
 mypy = "*"
 pytest-mock = "^3.14.0"
 pre-commit = "^4.0.1"
+tavily-python = "^0.5.0"
 
 [build-system]
 requires = ["poetry-core"]
