Default to gpt-4o-mini
Only gpt-4o-mini produced correct output for 10 countries and 30 numbers in examples/playbooks/loop.md

Other models either abruptly truncated output, or added comments like "Continue loop similarly from 12 to 30" without actually going through the loop

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 # LLM Configuration
-DEFAULT_MODEL=claude-3-5-sonnet-20241022
+DEFAULT_MODEL=gpt-4o-mini
+
 ANTHROPIC_API_KEY=your-anthropic-api-key
 OPENAI_API_KEY=your-openai-api-key
-
-REDIS_URL="redis://127.0.0.1:6379/0"
+XAI_API_KEY=your-xai-api-key
+GEMINI_API_KEY=your-gemini-api-key
 
 # LLM Cache
 # LLM_CACHE_TYPE = disk or redis
 LLM_CACHE_TYPE="disk"
 LLM_CACHE_PATH=".llm_cache"
 LLM_CACHE_ENABLED="true"
+# REDIS_URL="redis://127.0.0.1:6379/0"
