Refine intermediate format and interpreter LLM output

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,6 @@
 ENVIRONMENT=test
-DEFAULT_MODEL=claude-3-5-sonnet-20241022
+MODEL=claude-3-7-sonnet-latest
+# MODEL=gpt-4o
 
 # LLM Cache
 LLM_CACHE_TYPE="disk"
