--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest-asyncio = "^0.26.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
 pytest-asyncio = "^0.26.0"
+coverage = "^7.8.0"
 
 [build-system]
 requires = ["poetry-core"]
