--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest-asyncio = "^0.26.0"
 pytest = "^8.3.5"
 pytest-asyncio = "^0.26.0"
 coverage = "^7.8.0"
+pytest-cov = "^6.1.1"
 
 [build-system]
 requires = ["poetry-core"]
