--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest = "^8.3.5"
 pytest-asyncio = "^0.26.0"
 coverage = "^7.8.0"
 pytest-cov = "^6.1.1"
+ruff = "^0.11.8"
 
 [build-system]
 requires = ["poetry-core"]
