--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest-asyncio = "^0.26.0"
 coverage = "^7.8.0"
 pytest-cov = "^6.1.1"
 ruff = "^0.11.8"
+black = "^25.1.0"
 
 [build-system]
 requires = ["poetry-core"]
