--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 ENVIRONMENT=development
 
 # LLM Configuration
-MODEL=gpt-4o
+MODEL=claude-sonnet-4-20250514
 
 ANTHROPIC_API_KEY=your-anthropic-api-key
 OPENAI_API_KEY=your-openai-api-key
