Fix failing tests

--- a/.env.test
+++ b/.env.test
@@ -9,4 +9,4 @@ LLM_CACHE_TYPE="disk"
 LLM_CACHE_PATH=".llm_cache_test"
 LLM_CACHE_ENABLED="true"
 
-LANGFUSE_ENABLED="true"
+LANGFUSE_ENABLED="false"
