--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,8 @@
-MODEL=claude-3-7-sonnet-latest
+MODEL=claude-sonnet-4-20250514
+# MODEL=claude-3-7-sonnet-latest
 # MODEL=gpt-4o
 # MODEL="gpt-4.1"
-# MODEL="gpt-4.1-mini"
+# MODEL="o4-mini"
 
 # LLM Cache
 LLM_CACHE_TYPE="disk"
