Use MCP servers as agents (#33)
Use MCP servers as agents. For example -

```
# WebScraper
remote:
  type: mcp
  transport: streamable-http
  url: http://localhost:8088/mcp
```

With this, you will be able to call tools from the MCP server, e.g. "Get web page $content using WebScraper.GetContentMarkdown($url)"

Other changes -

* Stack based context

* LLM caching
  * Keep only up to 4 cached messages (Anthropic max)
  * Consolidate messages while preserving cache control
  * Preserve cache control on system message.

* Generate playbook execution summary in $__ variable

* Do not include null variables in the prompt. Do not include private variables that start with $_.

* Metadata on agents and playbooks (#32)
  * Compilation prompt to standardize metadata
  * Use metadata "public: true" instead of "## public: PlaybookName"

* Call playbooks across agents within the same program ("in process")
  * Not thread safe
  * Calls from other agents pollute(?) agent's history
  * External calls execute within the current context of the agent thus leak information across calls
  * Create new instance of agent to process external calls

* Compiler adds control flow to ensure form filling and multi-turn conversation directive

* New Playbook class hierarchy
  - LocalPlaybook
    - MarkdownPlaybook
    - PythonPlaybook
  - RemotePlaybook

* Allow sync and async python playbooks

* Transport Layer for MCP

* Agent class hierarchy
  - AIAgent
    - LocalAIAgent
      - MarkdownAIAgent
      - PythonAIAgent
    - RemoteAIAgent
      - MCPAgent

* Create MCP Agent

* Insomnia MCP example

* Refine execution prompt. Add unexpected situation example.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "playbooks"
-version = "0.3.5"
+version = "0.4.0"
 description = "A framework for creating AI applications and agents using natural language programming"
 authors = ["Amol Kelkar <kelkar.amol@gmail.com>"]
 license = "MIT"
@@ -21,6 +21,7 @@ redis = "^5.2.1"
 markdown-it-py = "^3.0.0"
 python-frontmatter = "^1.1.0"
 pytest-asyncio = "^0.26.0"
+fastmcp = "^2.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
