--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: (Playbooks package) Run tests
       run: |
-        poetry run pytest tests/ --cov=src/playbooks --cov-report=xml
+        poetry run pytest tests/ -vv --cov=src/playbooks --cov-report=xml
         
     - name: Upload Playbooks package coverage
       uses: codecov/codecov-action@v5
