--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,19 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Python Debugger: Attach using Process Id",
+      "type": "debugpy",
+      "request": "attach",
+      "processId": "${command:pickProcess}"
+    },
+    {
       "type": "playbooks",
       "request": "launch",
       "name": "Launch Playbooks Program",
-      "pythonPath": "/Users/amolk/Library/Caches/pypoetry/virtualenvs/playbooks-vVWNXwRG-py3.10/bin/python",
       "program": "${file}",
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
-      "stopOnEntry": true
+      "stopOnEntry": false
     },
     {
       "name": "Command line agent chat",
