--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ orjson = "^3.11.1"
 apscheduler = "^3.11.0"
 fastapi-sso = "^0.18.0"
 websockets = "^15.0.1"
+bidict = "^0.23.1"
 
 
 [tool.poetry.group.dev.dependencies]
