--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,17 @@
 ENVIRONMENT=development
 
-# LLM Configuration
-MODEL=claude-sonnet-4-20250514
-
+# API Keys (secrets - keep in .env, not in TOML)
 ANTHROPIC_API_KEY=your-anthropic-api-key
 OPENAI_API_KEY=your-openai-api-key
 XAI_API_KEY=your-xai-api-key
 GEMINI_API_KEY=your-gemini-api-key
 GROQ_API_KEY=your-groq-api-key
 
-# LLM Cache
-# LLM_CACHE_TYPE = disk or redis
-LLM_CACHE_TYPE="disk"
-LLM_CACHE_ENABLED="true"
-LLM_CACHE_PATH=".llm_cache" # for disk cache
+# Redis URL (external service - keep in .env)
 REDIS_URL="redis://127.0.0.1:6379/0" # for redis cache
 
-# Langfuse
+# Langfuse secrets
 LANGFUSE_SECRET_KEY="sk-lf-..."
 LANGFUSE_PUBLIC_KEY="pk-lf-..."
 LANGFUSE_HOST="http://localhost:3000"
+# enable setting in playbooks.toml
