--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ apscheduler = "^3.11.0"
 fastapi-sso = "^0.18.0"
 websockets = "^15.0.1"
 bidict = "^0.23.1"
+pydantic = "^2.11.7"
+platformdirs = "^4.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
