Refactor artifacts, implement type-aware argument resolution, variable assignment, etc
This commit includes a major refactoring of artifact handling and implements a sophisticated type-aware argument resolution system that properly handles variables, artifacts, and literals across different playbook types. This refactoring provides:
1. **Better type safety**: Distinction between literals and variable references
2. **Flexible artifact handling**: Artifacts behave appropriately per playbook type
3. **Improved DX**: Cleaner variable assignments and last-result capture
4. **Enhanced capabilities**: Multi-line strings, string interpolation, expression evaluation
5. **Simplified architecture**: Consolidated artifact handling in variables.py

## Core Changes

### 1. Artifact System Refactoring (Fixes #50)
- **Removed** `src/playbooks/artifacts.py` (deleted entire file)
- **Moved** `Artifact` class to `src/playbooks/variables.py` as a subclass of `Variable`
- Artifacts now have comprehensive string operation support:
  - Comparison operators (`__eq__`, `__lt__`, `__le__`, `__gt__`, `__ge__`)
  - String operations (`__add__`, `__radd__`, `__mul__`, `__rmul__`)
  - Indexing and slicing (`__getitem__`, `__contains__`, `__len__`)
- Added triple-quoted string support for artifact content in LLM responses
- Artifacts with summaries: `Artifact[$name, "summary", """content"""]`
- Automatic artifact creation for large playbook results (> `artifact_result_threshold`)

### 2. Type-Aware Argument Resolution System (Fixes #51)
- **New file**: `src/playbooks/argument_types.py` with typed argument wrappers:
  - `LiteralValue`: Resolved literal values (strings, numbers, booleans)
  - `VariableReference`: Variable references for runtime resolution ($varname)
- Playbook-type-specific argument resolution:
  - **External playbooks** (Say, SendMessage, RemotePlaybook): Artifacts → values
  - **Python playbooks**: Artifacts → Artifact objects
  - **LLM playbooks**: Variables → "$var" string refe

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ websockets = "^15.0.1"
 bidict = "^0.23.1"
 pydantic = "^2.11.7"
 platformdirs = "^4.4.0"
+simpleeval = "^1.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
