--- a/playbooks.toml
+++ b/playbooks.toml
@@ -1,6 +1,7 @@
 debug = true
 timeout_s = 60
 artifact_result_threshold = 200  # Auto-create artifact for playbook results longer than this (# of chars)
+max_llm_calls = 50
 
 [model]
 provider = "anthropic"
@@ -17,4 +18,4 @@ type = "disk"
 path = ".llm_cache"
 
 [langfuse]
-enabled = false
+enabled = true
