Incremental code buffer parsing
feat: add streaming Python execution with incremental code buffer

Implement streaming execution of LLM-generated Python code, allowing
statements to execute progressively as code chunks arrive rather than
waiting for complete code blocks. This significantly improves
responsiveness and enables real-time variable tracking during LLM
generation.

Core Changes:
- Add StreamingPythonExecutor for incremental code execution
  * Executes complete statements as soon as they arrive
  * Tracks variable changes in real-time via namespace inspection
  * Handles both sync and async statements with await
  * Provides detailed error context with executed code for LLM retry

- Add CodeBuffer with indentation-aware executable prefix detection
  * Intelligently detects complete statements using indentation
  * Handles multiline constructs (loops, functions, conditionals)
  * Strips markdown code block markers ()
  * Walks backwards from last non-whitespace line to find valid prefix

Additional Features:
- Add --snoop CLI flag to agent_chat for debugging agent messages
  * Display messages exchanged between agents
  * Update VSCode launch.json to enable snoop by default

- Improve interpreter prompt error handling
  * Detect infinite loops and inconsistencies
  * Better handling of missing playbooks
  * Add guidance to act like an intelligent human expert

Configuration & Refactoring:
- Switch default model to claude-haiku-4-5 for faster execution

Notes:
- Streaming executor is ready for integration but not yet used in main flow

--- a/playbooks.toml
+++ b/playbooks.toml
@@ -9,7 +9,8 @@ full_state_interval = 4  # Send full state every N LLM calls (I-frame interval)
 
 [model]
 provider = "anthropic"
-name = "claude-sonnet-4-5-20250929"
+# name = "claude-sonnet-4-5-20250929"
+name = "claude-haiku-4-5-20251001"
 temperature = 0.2
 max_completion_tokens=15000
 
