--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,46 +1,51 @@
-[tool.poetry]
+[project]
 name = "playbooks"
 version = "0.7.1"
 description = "A framework for creating AI applications and agents using natural language programming"
-authors = ["Amol Kelkar <kelkar.amol@gmail.com>"]
-license = "MIT"
 readme = "README.md"
-packages = [{include = "playbooks", from = "src"}]
+license = {text = "MIT"}
+authors = [
+    {name = "Amol Kelkar", email = "kelkar.amol@gmail.com"}
+]
+requires-python = ">=3.12,<4.0"
+dynamic = ["dependencies"]
 
-[tool.poetry.scripts]
+[project.scripts]
 playbooks = "playbooks.cli:main"
 playbooks-shebang = "playbooks.shebang_cli:main"
+
+[tool.poetry]
+packages = [{include = "playbooks", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
 dotenv = "^0.9.9"
-litellm = "^1.65.0"
+litellm = "^1.80.5"
 diskcache = "^5.6.3"
-langfuse = "^2.60.2"
-redis = "^5.2.1"
-markdown-it-py = "^3.0.0"
+langfuse = "^3.10.1"
+redis = "^7.1.0"
+markdown-it-py = "^4.0.0"
 python-frontmatter = "^1.1.0"
-pytest-asyncio = "^0.26.0"
-fastmcp = "^2.0.0"
-rich = "^14.1.0"
-fastapi = "^0.116.1"
-orjson = "^3.11.1"
-apscheduler = "^3.11.0"
+fastmcp = "^2.13.1"
+rich = "^14.2.0"
+fastapi = "^0.122.0"
+orjson = "^3.11.4"
+apscheduler = "^3.11.1"
 fastapi-sso = "^0.18.0"
 websockets = "^15.0.1"
 bidict = "^0.23.1"
-pydantic = "^2.11.7"
-platformdirs = "^4.4.0"
+pydantic = "^2.12.4"
+platformdirs = "^4.5.0"
 simpleeval = "^1.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.3.5"
-pytest-asyncio = "^0.26.0"
-coverage = "^7.8.0"
-pytest-cov = "^6.1.1"
-ruff = "^0.11.8"
-black = "^25.1.0"
+pytest = "^9.0.1"
+pytest-asyncio = "^1.3.0"
+coverage = "^7.12.0"
+pytest-cov = "^7.0.0"
+ruff = "^0.14.6"
+black = "^25.11.0"
 
 [build-system]
 requires = ["poetry-core"]
