--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ bidict = "^0.23.1"
 pydantic = "^2.12.4"
 platformdirs = "^4.5.0"
 simpleeval = "^1.0.3"
-dotmap = "^1.3.30"
+python-box = "^7.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
