feat: major telemetry and LLM message architecture overhaul
## Telemetry & Observability
- **Event-Driven Langfuse Integration**: Replaced direct Langfuse calls with a comprehensive event handler system that provides clean separation between business logic and telemetry. Added LangfuseEventHandler class that subscribes to semantic business events and translates them to appropriate spans, observations, and traces.

- **Enhanced Trace Structure**: Implemented proper trace hierarchy with root container observations for each agent, nested playbook spans, and improved trace naming. Added trace namer observations to ensure final trace names reflect agent class and ID.

- **Timestamp Management**: Introduced configurable relative timestamp system with granularity control (seconds to milliseconds). Replaced absolute datetime objects with integer timestamps relative to program start time for better performance and consistency.

## LLM Message Architecture
- **Component-Based User Input Messages**: Refactored UserInputLLMMessage to support structured components (about_you, instruction, python_code_context, final_instructions) instead of monolithic content strings.

- **System Prompt Loading**: Changed SystemPromptLLMMessage to load content from interpreter_run.txt file instead of accepting content as parameter, ensuring consistency across the application.

- **Top-Level Message Support**: Added system messages (system prompt, agent info) to call stack top-level messages that appear before frame-specific execution context.

## State Management
- **Agent State Refactoring**: Replaced PlaybookDotMap with Box for agent state management, providing more flexible dot-notation access to nested dictionaries.

- **Call Stack Improvements**: Enhanced message ordering with top-level messages appearing before frame messages. Removed direct Langfuse span references from CallStackFrame for cleaner separation.

- **Enhanced Log Items**: Updated SessionLogItemBase to use integer timestamps an

--- a/playbooks.toml
+++ b/playbooks.toml
@@ -2,6 +2,9 @@ debug = false
 timeout_s = 60
 artifact_result_threshold = 500  # Auto-create artifact for playbook results longer than this (# of chars)
 max_llm_calls = 50
+meeting_message_batch_timeout = 2.0  # Rolling timeout in seconds for batching meeting messages to minimize thrashing
+meeting_message_batch_max_wait = 10.0  # Absolute maximum wait time in seconds (prevents starvation under heavy load)
+timestamp_granularity = 0  # Timestamp precision: 0=seconds, 1=0.1s, 2=0.01s, 3=milliseconds, -1=10s, -2=100s
 
 [model]
 provider = "anthropic"
@@ -10,12 +13,15 @@ name = "claude-haiku-4-5-20251001"
 temperature = 0.2
 max_completion_tokens=15000
 
-# Specific model overrides can be added
-# [model.execution]
-# [model.compilation]
+[model.execution]
+provider = "xai"
+name = "xai/grok-4-1-fast-non-reasoning" # fast and accurate!
 
 [model.compilation]
+provider = "anthropic"
 name = "claude-sonnet-4-5-20250929"
+temperature = 0.2
+max_completion_tokens=15000
 
 [llm_cache]
 enabled = true
