--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,16 +39,14 @@ jobs:
         LLM_CACHE_ENABLED: "true"
         LLM_CACHE_TYPE: "disk"
         LLM_CACHE_PATH: ".llm_cache_test"
-        ANTHROPIC_API_KEY: "test-key"  # Tests should use cache, not make actual API calls
-        MODEL: "claude-sonnet-4-20250514"  # Match the model in .env.test
       run: |
         poetry run pytest tests/unit -vv --cov=src/playbooks --cov-report=xml
         
         
-    - name: Upload Playbooks package coverage
-      uses: codecov/codecov-action@v5
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        slug: playbooks-ai/playbooks
-        fail_ci_if_error: true
-        flags: playbooks-package
+    # - name: Upload Playbooks package coverage
+    #   uses: codecov/codecov-action@v5
+    #   with:
+    #     token: ${{ secrets.CODECOV_TOKEN }}
+    #     slug: playbooks-ai/playbooks
+    #     fail_ci_if_error: true
+    #     flags: playbooks-package
