--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "playbooks"
 version = "0.7.3"
-description = "A framework for creating AI applications and agents using natural language programming"
+description = "Playbooks is a semantic programming system for AI agents — easy enough to design behavior, rigorous enough to run it at enterprise scale."
 readme = "README.md"
 license = {text = "MIT"}
 authors = [
